#ifndef TW_CLASS_KEYACTION
#define TW_CLASS_KEYACTION

/**
 * @file
 *
 * Header file for the tw::KeyAction enum.
 */

namespace tw {
enum KeyAction {

    PRESS = 1,
    RELEASE = 0,
    REPEAT = 2

};
}

#endif
